swiglu/hls/.autopilot/db/swiglu.pp.0.cpp.clang-tidy.loop-label.out.log
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:3185:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:3185:5: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:3199:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:3199:5: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:3213:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:3213:5: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:5181:7: warning: Added loop label VITIS_LOOP_1248_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1248_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:5181:7: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7144:9: warning: Added loop label VITIS_LOOP_37_1:   [xilinx-label-all-loops]
        for (int i = 0; i < 10; i++) {
        ^~~
        VITIS_LOOP_37_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7144:9: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7207:9: warning: Added loop label VITIS_LOOP_100_1:   [xilinx-label-all-loops]
        for (int w = 0; w < 9; w++) {
        ^~~
        VITIS_LOOP_100_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7207:9: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7274:2: warning: Added loop label VITIS_LOOP_167_1:   [xilinx-label-all-loops]
 for (int k = 0; k < 8; k++) {
 ^~~
 VITIS_LOOP_167_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7274:2: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7283:2: warning: Added loop label VITIS_LOOP_186_2:   [xilinx-label-all-loops]
 for (int b = 0; b < 8; b++) {
 ^~~
 VITIS_LOOP_186_2: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7283:2: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7300:9: warning: Added loop label VITIS_LOOP_203_3:   [xilinx-label-all-loops]
        for (int k = 0; k < 8; k++) {
        ^~~
        VITIS_LOOP_203_3: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7300:9: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7362:48: error: Invalid Directive: for current device, ram_1p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=gate_fp type=ram_1p impl=bram
                                               ^
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7383:9: warning: Added loop label VITIS_LOOP_286_1:   [xilinx-label-all-loops]
        for (int k = 0; k < 8; k++) {
        ^~~
        VITIS_LOOP_286_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7383:9: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7412:9: warning: Added loop label VITIS_LOOP_315_1:   [xilinx-label-all-loops]
        for (int w = 0; w < 9; w++) {
        ^~~
        VITIS_LOOP_315_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7412:9: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7468:2: warning: Added loop label VITIS_LOOP_371_1:   [xilinx-label-all-loops]
 for (int k = 0; k < 8; k++) {
 ^~~
 VITIS_LOOP_371_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7468:2: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7477:2: warning: Added loop label VITIS_LOOP_387_2:   [xilinx-label-all-loops]
 for (int b = 0; b < 16; b++) {
 ^~~
 VITIS_LOOP_387_2: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7477:2: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7489:2: warning: Added loop label VITIS_LOOP_399_3:   [xilinx-label-all-loops]
 for (int b = 0; b < 16; b++) {
 ^~~
 VITIS_LOOP_399_3: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7489:2: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7505:9: warning: Added loop label VITIS_LOOP_415_4:   [xilinx-label-all-loops]
        for (int k = 0; k < 8; k++) {
        ^~~
        VITIS_LOOP_415_4: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7505:9: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7537:2: warning: Added loop label VITIS_LOOP_447_1:   [xilinx-label-all-loops]
 for (int b = 0; b < 32; b++) {
 ^~~
 VITIS_LOOP_447_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7537:2: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7543:5: warning: Added loop label VITIS_LOOP_453_2:   [xilinx-label-all-loops]
    for (int b = 0; b < 32; b++) {
    ^~~
    VITIS_LOOP_453_2: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7543:5: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7600:13: warning: Added loop label VITIS_LOOP_510_1:   [xilinx-label-all-loops]
            for (int j = 0; j < 16; j++) {
            ^~~
            VITIS_LOOP_510_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7600:13: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7648:50: error: Invalid Directive: for current device, ram_1p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=x_local_1 type=ram_1p impl=bram
                                                 ^
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7652:50: error: Invalid Directive: for current device, ram_1p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=x_local_2 type=ram_1p impl=bram
                                                 ^
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7663:51: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=gate_cache type=ram_2p impl=bram
                                                  ^
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7668:52: error: Invalid Directive: for current device, rom_1p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=sigmoid_lut type=rom_1p impl=bram
                                                   ^
